--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,13 +60,13 @@ a:hover {
   box-shadow: 0 0 0 4px #cde1f8;
 }
 
-.display-5 {
+/* .display-5 {
   font-size: 2.5rem;
   font-weight: 300;
   line-height: 1.1;
-}
+} */
 
-.display-6 {
+/* .display-6 {
   font-size: 2rem;
   font-weight: 300;
   line-height: 1.1;
@@ -77,7 +77,7 @@ a:hover {
   height: 32px;
   margin-right: 4px;
   overflow: hidden;
-}
+} */
 
 .bg-image {
   background-repeat: no-repeat;
